# pii-airlock

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_zh-CN.md  README_zh.md  docker-compose.yml  pyproject.toml
config/: custom_patterns.example.yaml  intent_patterns.yaml  quotas.example.yaml  strategies.example.yaml  tenants.example.yaml
config/allowlists/: common_locations.txt  public_figures.txt
config/compliance_presets/: ccpa.yaml  financial.yaml  gdpr.yaml  pipl.yaml
docs/: README.md  issues.md
docs/api/: management-api.md
docs/design/: architecture.md  deployment.md  phase6-plan.md  roadmap.md
docs/guide/: strategies.md
docs/guides/: multi-tenant.md  troubleshooting.md
docs/progress/: changelog.md  status-report.md
logs/audit/: audit_20260122.jsonl
src/pii_airlock/: __init__.py  main.py
src/pii_airlock/api/: __init__.py  allowlist_api.py  audit_api.py  auth_middleware.py  compliance_api.py  intent_api.py  limiter.py  middleware.py  models.py  proxy.py  routes.py
src/pii_airlock/audit/: __init__.py  logger.py  models.py  store.py
src/pii_airlock/auth/: __init__.py  api_key.py  quota.py  rbac.py  tenant.py
src/pii_airlock/cache/: __init__.py  llm_cache.py
src/pii_airlock/config/: __init__.py  compliance_loader.py  pattern_loader.py
tests/: conftest.py  test_allowlist.py  test_api_key.py  test_audit.py  test_audit_api.py  test_auth_middleware.py  test_cache.py  test_compliance_api.py  test_compliance_loader.py  test_counter.py  test_deanonymizer.py  test_edge_cases.py  test_entropy_detector.py  test_error_handling.py  test_fuzzy_matcher.py  test_integration.py  test_intent_detector.py  test_logging.py  test_mapping.py  test_metrics.py  test_pattern_loader.py  test_performance.py  test_proxy.py  test_rate_limit.py  test_rbac.py  test_recognizers.py  test_redis_store.py  test_routes.py  test_secret_scanner.py  test_strategies.py  test_stream_buffer.py  test_streaming.py  test_synthetic.py  test_tenant.py  test_ui_api.py  test_utils.py
(+42 files in other folders)
